# ai-virtual-agent

./: .coveragerc  .dockerignore  .env.dev.example  .env.example  .gitignore  CONTRIBUTING.md  Containerfile  DEVELOPMENT.md  Dockerfile.backend.dev  Dockerfile.frontend.dev  INSTALLING.md  KNOWLEDGE_BASE_STATUS_SUMMARY.md  LICENSE  Makefile  README.md  _config.yml  compose.dev.yaml  compose.yaml  entrypoint.sh  index.md  pyproject.toml  requirements-test.txt  run_tests.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-and-push.yaml  build-dev.yml  ci.yml  create-release-pr.yml  release.yml
_layouts/: default.html  post.html
_posts/: 2025-11-14-oracle-mcp-openshift.md
admin/: package-lock.json  package.json
admin/src/: App.tsx
backend/: .env  .flake8  .pre-commit-config.yaml  README.md  agents.py  alembic.ini  database.py  llamastack.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_sessions.py
backend/agent_templates/: business_banking.yaml  (+7 more)
db/: schema.sql
docs/: API.md  README.md  agent-templates-ingestion.md  api-reference.md  knowledge-base-architecture.md  virtual-agents-architecture.md
frontend/: .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
helm/: Chart.yaml  values.yaml
ingestion/: resources.yaml
local_dev/: local_backend.sh  local_frontend.sh  local_llamastack.sh  run_local.sh  stop_local.sh
mcpservers/: README.md  __init__.py
tests/: .coverage.unit  README.md  conftest.py  requirements.txt  run_tests.sh
(+375 files in other folders)
